# VideoAudioV2

./: build.gradle  settings.gradle
VideoEidtexter/: CMakeLists.txt  build.gradle
VideoEidtexter/src/main/: AndroidManifest.xml
VideoEidtexter/src/main/cpp/: ImageBlur.cpp  ImageBlur.h
VideoEidtexter/src/main/java/com/cgfay/cameralibrary/activity/: CameraActivity.java  CameraSettingActivity.java  EditextVideoActivity.java  EditextVideoActivityV1.java  EffectVideoActivity.java  EffectVideoActivityV.java
VideoEidtexter/src/main/java/com/cgfay/cameralibrary/adapter/: EffectResourceAdapter.java  MusicAdapter.java  PreviewResourceAdapter.java  StickersAdapter.java  ThumbVideoAdapter.java
VideoEidtexter/src/main/java/com/cgfay/cameralibrary/bean/: ItemSticker.java
VideoEidtexter/src/main/java/com/cgfay/cameralibrary/filter/: GLColorFilter.java  GLEffectFilter.java  GLStickerFilter.java
VideoEidtexter/src/main/java/com/cgfay/cameralibrary/fragment/: CameraPreviewFragment.java  MusicFragment.java  PreviewFiltersFragment.java  StickerFragment.java  StickersFragment.java  VoiceAdjustFragment.java
VideoEidtexter/src/main/res/drawable/: ic_bg_seek.xml  ic_seletct_video_small.xml  ic_sticker_thumb.xml  ic_video_status_bg.xml
VideoEidtexter/src/main/res/layout/: activity_camera.xml  activity_editext_effect_video.xml  activity_editext_video.xml  fragment_camera_preview.xml  fragment_layout_voice_adjust.xml  fragment_preview_resource.xml  fragment_sticker_layout.xml  item_music.xml  item_preview_resource_view_v2.xml  item_sticker.xml  item_video_thumb.xml  layout_editext_video.xml  view_preview_bottom.xml  view_preview_top.xml
VideoEidtexter/src/main/res/values/: attrs.xml  colors.xml  dimen.xml
backup/: EditextVideoActivity.java
(+481 files in other folders)
